Fix dashboard tables return to line if window too small

--- a/app/components/base/table/table.scss
+++ b/app/components/base/table/table.scss
@@ -119,40 +119,8 @@ bl-table {
  * instead of display: table.
  */
 bl-table.dashboard {
-    table {
-        display: block;
-    }
-
-    bl-thead {
-        display: block;
-    }
-
-    tbody {
-        display: block;
-
-        > tr {
-            display: block;
-            padding: 6px;
-        }
-    }
-
-    bl-cell,
-    bl-column {
-        &:first-child {
-            padding: 0;
-        }
-
-        &:last-child {
-            padding: 0;
-        }
-    }
-
-    bl-column {
-        display: inline-block;
-    }
-
     bl-cell {
-        display: inline-block;
+        padding: 0 5px;
     }
 }
 
